{
    "name": "Movement",
    "maps": [
        {
            "name": "CharacterControl",
            "id": "9a3e133d-f472-4a90-8d7e-bbfdcd2f72a0",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "737b2ba6-3fe1-4cf1-8225-9db1a60d1945",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "c9293f39-0b33-4f2b-aebc-8158c163223d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotation",
                    "type": "Value",
                    "id": "cbb5d6b9-a3c0-4b72-b1c1-08cc3038bd5b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "R_Attack",
                    "type": "Button",
                    "id": "16ea9aef-00c3-400c-b354-84dffc462cde",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "L_Attack",
                    "type": "Button",
                    "id": "ca1e4951-a92d-4b53-8b0f-da48a05d9d22",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "38a1e291-ea31-43b9-b4b9-8d72c7023bfd",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c9d8e63e-94b8-4b95-b3f9-4f0ebefcbb83",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f9f7bc3b-af61-4265-abba-5d98c09d51f2",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "27cf52f8-8d76-453d-af37-f4ea30876b30",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "R_Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "899b69e0-3f22-4e2c-bc85-a3b8501c6936",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "L_Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}